# RustWeatherGraphs

./: Cargo.toml  README.md  adelaide.html  adelaide.js  brisbane.html  brisbane.js  cities.json  index.html  index.js  more.html  more.js  package-lock.json  style.css  sydney.html  sydney.js
pkg/: hot_or_not_3.d.ts  hot_or_not_3.js  hot_or_not_3_bg.js  hot_or_not_3_bg.wasm  hot_or_not_3_bg.wasm.d.ts  package.json
src/: lib.rs
